compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_higher_order_function_with_capture.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\nimport gleam/result\n\npub fn main() {\n  result.try(Ok(10), divide(_, 2))\n}\n\nfn divide(a: Int, b: Int) -> Result(Int, Nil) {\n  case a % b {\n    0 -> Ok(a / b)\n    _ -> Error(Nil)\n  }\n}\n"
---
----- SOURCE CODE

import gleam/result

pub fn main() {
  result.try(Ok(10), divide(_, 2))
}

fn divide(a: Int, b: Int) -> Result(Int, Nil) {
  case a % b {
    0 -> Ok(a / b)
    _ -> Error(Nil)
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec divide(integer(), integer()) -> {ok, integer()} | {error, nil}.
divide(A, B) ->
    case case B of
        0 ->
            0;

        _value ->
            A rem _value
    end of
        0 ->
            {ok, case B of
                0 ->
                    0;

                _value@1 ->
                    A div _value@1
            end};

        _ ->
            {error, nil}
    end.

-spec main() -> {ok, integer()} | {error, nil}.
main() ->
    case {ok, 10} of
        {ok, Value} ->
            divide(Value, 2);

        {error, Error} ->
            {error, Error}
    end.
